--- a/style.css
+++ b/style.css
@@ -6,32 +6,49 @@ html {
   }
 
 body{
+    height: 100vh;
+    background-color: #fefae0;
+}
+
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    padding-top: 4vh;
 }
 .calculator {
     display: flex;
+    border: 2px solid black;
+    box-shadow: 5px 5px rgb(69, 69, 69), inset 0px 0px rgb(192, 158, 7);
+    padding: 4vh;
+    border-radius: 4vh;
+    background-color: rgb(169, 187, 201);
+
 }
 .buttons {
     
     display: grid;
     grid-template-columns: repeat(4, 10vh);
-    grid-template-rows: repeat(6, 10vh);
+    grid-template-rows: 15vh repeat(5, 10vh);
     font-size: 4vh;
     grid-gap: 1rem;
     
+    
+    
 }
+
 
 .button {
     font-family: 'Roboto Mono', monospace;
     display: flex;
     border: 2px solid black;
+    background-color: whitesmoke;
     justify-content: center;
     align-items: center;
     border-radius: 25%;
     font-size: 2.5vh;
+    box-shadow: 0.5vh 0.5vh rgb(69, 69, 69), inset 0vh 0vh rgb(192, 158, 7);
+    transition: all .05s ease;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -41,16 +58,47 @@ body{
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+.button:hover {
+    filter: brightness(90%);
+    transition: all .05s ease;
+    box-shadow: 0.3vh 0.3vh rgb(69, 69, 69), inset 0vh 0vh rgb(0,0,0,0.25);
+  }
+
+.button:active, .button:focus {
+    transition: all .05s ease;
+    outline: none;
+    box-shadow: 0 0 rgb(69, 69, 69), inset 0.5vh 0.5vh rgb(0,0,0,0.25);
+  }
+
 .button img{
     width: 3.5vh;
-    pointer-events: none
+    pointer-events: none;
+    filter: invert(1);
 }
 
 .operator {
-    font-size: 3vh;
-    font-weight: 100;
+    background-color: whitesmoke;
+    box-shadow: 0.5vh 0.5vh rgb(69, 69, 69), inset 0vh 0vh rgb(192, 158, 7);
+    transition: all .05s ease;
+}
+
+.operator:active, .operator:focus {
+    background: rgba(255, 224, 86, 0.834);
+    transition: all .05s ease;
+    outline: none;
+    box-shadow: 0 0 rgb(69, 69, 69), inset 0.5vh 0.5vh rgb(0,0,0,0.25);
+  }
+
+#clear, #back, #\/{
+    background-color: rgb(93, 93, 93);
+    color: white;
+}
+
+#\+ ,#\-, #\*{
+    background-color: rgb(255, 208, 0); 
 }
 #equal {
+    background-color: rgb(255, 208, 0);
     grid-row-start: 5;
     grid-row-end: 7;
     grid-column-start: 4;
@@ -65,21 +113,44 @@ body{
 }
 
 .answer{
+    /* grid stuff */
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: span 1;
     grid-column-start: 1;
     grid-column-end: span 4;
+    /* border stuff */
     border: 2px solid black;
-    height: 10vh;
+    border-radius: 3vh;
     box-sizing: border-box;
-    width: 100%;
     overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: right;
-    font-size: 5vh;
+    font-size: 7vh;
     padding-right: 2vh;
-    border-radius: 3vh;
+    background-color: whitesmoke;
+    box-shadow: 0 0 rgb(69, 69, 69), inset 3px 3px rgb(0,0,0,0.25);
+    transition: all .05s ease;
 }
 
+.answerhover {
+    box-shadow: 0 0 rgb(69, 69, 69), inset 4px 4px rgb(0,0,0,0.25);
+    transition: all .05s ease;
+  }
 
+  .footer {
+    position: block;
+    margin: 3vh;
+    text-align: center;
+    font-size: 3vh;
+  }
+  
+  .footer-text {
+    text-decoration: none;
+    color: black;
+    font-weight: normal;
+  }
+  .footer-text:hover{
+    color: rgb(39, 39, 39);
+    font-weight: bold;
+  }
